--- a/src/Components/Layout/mobileLayout/mobile.css
+++ b/src/Components/Layout/mobileLayout/mobile.css
@@ -18,14 +18,20 @@ body{
 }
 
 .mTop{
-    background-color: #00000000;
+    background-color: #E8E8E1;
+    width: 100vw;
+    max-height: 20vh;
     display: flex;
+    position: sticky;
+    top:0;
+    left:0;
     flex-direction: column;
+    z-index: 4;
 }
 
 #topLogo{
-    width: 100%;
-    height:auto;
+    max-height: 20vh;
+    max-width: 100%;
     padding:none;
     margin:none;
     z-index: 5;
@@ -59,16 +65,16 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     position: fixed;
-    height:15%;
+    height:25vh;
     width:100%;
-    top: 0vh;
+    top: 20vh;
     left:0vh;
     z-index: 0;
 }
 
 .mPlaceHolder{
     position:static;
-    height:15%;
+    height:5vh;
     width:100%;
     background-color: #00000000;
 }
@@ -81,9 +87,10 @@ body{
 }
 
 .mStuckImgContent{
+    height: 120vh;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
+    align-items: center;
+    justify-content: flex-start;
     min-height:inherit;
 }
