adding contact form

--- a/src/Components/Layout/layout.css
+++ b/src/Components/Layout/layout.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #E8E8E1;
+    background-color: #000080;
     color: black;
     
     font-family: "Merienda", cursive;
