--- a/src/Components/Content/content.css
+++ b/src/Components/Content/content.css
@@ -72,12 +72,11 @@
     
 }
 
-.cateringForm{
-}
-
 iframe{
     border:none;
     background: transparent;
+    background-color: transparent;
+    margin: 3vh;
 }
 
 .contact{
